--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<h1>{{ title }}</h1>
-<router-outlet></router-outlet>
+<body>
+  <header>
+    <h1>🚀 {{ title }}</h1>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  <footer>
+    <h6>🚀 {{ title }}</h6>
+    <p>{{ subtitle }}</p>
+  </footer>
+</body>
