feat: trip details

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,10 +7,19 @@
 .pending {
   font-style: italic;
 }
+
 .green {
   color: green;
 }
 
 .orange {
+  color: orange
+}
+
+.sold-out {
+  color: red
+}
+
+.few-places {
   color: orange
 }
