--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,6 @@
   <footer>
     <h6>🚀 {{ title }}</h6>
     <p>{{ subtitle | uppercase }}</p>
-    <a [href]="authorUrl">Alberto Basalo</a>
+    <a [href]="authorUrl">{{ author }}</a>
   </footer>
 </body>
