--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <body>
   <header>
-    <h1>🚀 {{ title | uppercase }}</h1>
+    <nav>
+      <ul>
+        <li>
+          <strong>
+            🚀 {{ title | uppercase }}
+          </strong>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main>
     <article>
