feat: add router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
     </article>
     <aside *ngIf="reloading"
            aria-busy="true"> Reloading... please wait. </aside>
-    <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
   </main>
   <footer>
     <h6>🚀 {{ title }}</h6>
