feat: header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
 <body>
   <header>
-    <nav>
-      <ul>
-        <li>
-          <strong>
-            🚀 {{ title | uppercase }}
-          </strong>
-        </li>
-      </ul>
-    </nav>
+    <app-header></app-header>
   </header>
   <main>
     <article>
