--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,6 @@
     <router-outlet></router-outlet>
   </main>
   <footer>
-    <h6>🚀 {{ title }}</h6>
-    <p>{{ subtitle | uppercase }}</p>
-    <a [href]="authorUrl">{{ author }}</a>
+    <app-footer></app-footer>
   </footer>
 </body>
