--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li>
       <strong>
-        🚀 {{ title | uppercase }}
+        <app-title></app-title>
       </strong>
     </li>
   </ul>
