feat: home module component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,35 +3,7 @@
     <app-header></app-header>
   </header>
   <main>
-    <article>
-      <h3>We work with {{ getAgenciesCounter() }} agencies</h3>
-      <ul>
-        <li *ngFor=" let agency of agencies ">
-          <span [ngClass]="agency.status | lowercase">{{ agency.name }}</span>
-          <span *ngIf="agency.range==='Interplanetary' ; else orbital"> 💫 </span>
-          <ng-template #orbital> 🌎 </ng-template>
-        </li>
-      </ul>
-      <button (click)="reload('agencies')"> ♻️ </button>
-    </article>
-    <article>
-      <h3>We work with {{ trips.length }} trips</h3>
-      <ul>
-        <li *ngFor="let trip of trips">
-          <span [ngClass]="getClassForStatus(trip.status)">{{ trip.destination }}</span>
-          <span> 💸 {{ trip.flightPrice | currency }}</span>
-          <span> ⤴️ {{ trip.startDate | date:'yyyy-MMM-dd' }}</span>
-          <span> ⤵️ {{ trip.endDate | date:'yyyy-MMM-dd' }}</span>
-          <span [ngClass]="getClassForPlaces(trip.places)"> 🧑🏼‍🚀 {{ trip.places }}</span>
-          <ng-container *ngIf="trip.kind==='WithStay' then withStay; else tripOnly"></ng-container>
-          <ng-template #withStay> 🧳 </ng-template>
-          <ng-template #tripOnly> 🛰️ </ng-template>
-        </li>
-      </ul>
-      <button (click)="reload('trips')"> ♻️ </button>
-    </article>
-    <aside *ngIf="reloading"
-           aria-busy="true"> Reloading... please wait. </aside>
+    <app-home></app-home>
     <router-outlet></router-outlet>
   </main>
   <footer>
