feat: home route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
   </header>
   <main>
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
     <router-outlet></router-outlet>
   </main>
   <footer>
