feat: abour lazy route

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,8 +2,15 @@
   <ul>
     <li>
       <strong>
-        <app-title></app-title>
+        <a routerLink="/">
+          <app-title></app-title>
+        </a>
       </strong>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <a routerLink="/about">ℹ️ About</a>
     </li>
   </ul>
 </nav>
