feat: link register

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,6 +10,9 @@
   </ul>
   <ul>
     <li>
+      <a routerLink="/auth/register">🔏 Register</a>
+    </li>
+    <li>
       <a routerLink="/about">ℹ️ About</a>
     </li>
     <li>
