feat: agencies module agencieslist

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,4 @@
-<article>
-  <h3>We work with {{ getAgenciesCounter() }} agencies</h3>
-  <ul>
-    <li *ngFor=" let agency of agencies ">
-      <span [ngClass]="agency.status | lowercase">{{ agency.name }}</span>
-      <span *ngIf="agency.range==='Interplanetary' ; else orbital"> 💫 </span>
-      <ng-template #orbital> 🌎 </ng-template>
-    </li>
-  </ul>
-  <button (click)="reload('agencies')"> ♻️ </button>
-</article>
+<app-agencies-list></app-agencies-list>
 <article>
   <h3>We work with {{ trips.length }} trips</h3>
   <ul>
