feat: pre trips

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,6 +13,12 @@
       <a routerLink="agencies">➡️ Agencies</a>
     </li>
     <li>
+      <a routerLink="trips">➡️ Trips</a>
+    </li>
+    <li>
+      <a routerLink="auth/login">🔐 Log In</a>
+    </li>
+    <li>
       <a routerLink="/auth/register">🔏 Register</a>
     </li>
     <li>
