feat: login component

--- a/src/app/agencies/agencies.component.html
+++ b/src/app/agencies/agencies.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a routerLink="agency/new">Add a new agency</a>
+  <a routerLink="agency/new">🆕 Add a new agency</a>
 </nav>
 <app-agencies-list></app-agencies-list>
