--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,14 @@
-<h6>
-  <app-title></app-title>
-</h6>
-<p>{{ subtitle | uppercase }}</p>
-<a [href]="authorUrl">{{ author }}</a>
+<p>
+  <app-title></app-title>{{ subtitle }}
+</p>
+<a [href]="authorUrl"> {{ author }} </a>
+<nav>
+  <ul>
+    <li>
+      <a routerLink="about">ℹ️ About</a>
+    </li>
+    <li>
+      <a routerLink="/contact">📧 Contact</a>
+    </li>
+  </ul>
+</nav>
